--- a/css/main.css
+++ b/css/main.css
@@ -612,29 +612,55 @@ img {
   }
 }
 .backdrop {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
+  z-index: 1;
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 94px 15px 0;
+  opacity: 1;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.2);
   transition-property: opacity, visibility;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop__modal {
-  box-sizing: border-box;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  max-width: 450px;
+  padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden .backdrop__modal {
+  transform: translate(-50%, -50%) scale(0.1);
+}
+@media screen and (min-width: 768px) {
+  .backdrop__modal {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .backdrop__modal {
+    min-width: 528px;
+    min-height: 581px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .backdrop {
+    padding: 208px 159px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .backdrop {
+    padding: 0;
+  }
 }
 
 .close-button {
@@ -673,12 +699,16 @@ img {
 .form {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  align-items: center;
 }
 .form__field {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  width: 100%;
+}
+.form__field:nth-last-child(-n+3) {
+  margin-bottom: 20px;
 }
 .form__title {
   font-weight: 700;
@@ -688,6 +718,11 @@ img {
   line-height: 1.15;
   color: #212121;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .form__title {
+    text-align: center;
+  }
 }
 
 .form__field:last-child {
@@ -770,6 +805,14 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+  font-size: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .custom-checkbox {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .custom-checkbox__icon {
   top: 4px;
@@ -1255,6 +1298,7 @@ img {
     flex-direction: column;
     align-items: center;
     margin-bottom: 60px;
+    margin-right: auto;
   }
 }
 
