--- a/sass/components/main/modal/_form.scss
+++ b/sass/components/main/modal/_form.scss
@@ -1,11 +1,17 @@
 .form {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+
+  align-items: center;
   &__field {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    width: 100%;
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 20px;
+    }
   }
   &__title {
     font-weight: 700;
@@ -15,6 +21,10 @@
     line-height: calc(23 / 20);
     color: $product-text-color;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      text-align: center;
+    }
   }
 }
 
@@ -103,6 +113,12 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: $background-text-color;
+  font-size: 12px;
+  @media screen and(min-width: 1200px) {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1.71;
+  }
   &__icon {
     top: 4px;
     left: 0;
