--- a/sass/components/main/modal/_modal.scss
+++ b/sass/components/main/modal/_modal.scss
@@ -1,28 +1,50 @@
 .backdrop {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
+  z-index: 1;
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding: 94px 15px 0;
+  opacity: 1;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.2);
   transition-property: opacity, visibility;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &__modal {
-    box-sizing: border-box;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    min-width: 528px;
-    min-height: 581px;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
+    max-width: 450px;
+    padding: 40px;
     background: $white-text-color;
     box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
       0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 4px;
+    transition: transform $transition-time $transition-cubic;
+
+    .backdrop.is-hidden & {
+      transform: translate(-50%, -50%) scale(0.1);
+    }
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      min-width: 528px;
+      min-height: 581px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 208px 159px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 0;
   }
 }
 .close-button {
