--- a/css/main.css
+++ b/css/main.css
@@ -255,17 +255,11 @@ img {
     padding-bot: 16px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
   .header {
     padding-top: 21px;
   }
 }
-@media screen and (min-width: 1200px) {
-  .header {
-    padding-top: 24px;
-  }
-}
-
 .header__container {
   display: flex;
   align-items: center;
