--- a/sass/components/header/_main-header.scss
+++ b/sass/components/header/_main-header.scss
@@ -9,12 +9,11 @@
   @media screen and (min-width: 480px) {
     padding-bot: 16px;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (max-width: 1199px) {
     padding-top: 21px;
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 24px;
   }
 }
 
